# wordlink

./: Cargo.toml  LICENSE  LICENSE.txt  NOTICE.txt  Procfile  README.md  docker-compose-dev.yml  envup.sh  schema.sql
src/: main.rs
static/: index.html
templates/: index.html  insert.stpl  posted.stpl  query.stpl
