[package]
name = "wordlink"
version = "0.1.0"
authors = ["Dax Borde <daxborde@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
serde = "1.0.118"
sailfish = "0.2.3"
sailfish-macros = "0.2.3"
rand = "0.8.0"
sqlx = { version = "0.4.2", features = [ "runtime-tokio-native-tls", "postgres" ] }
