[package]
name = "wordlink"
version = "0.1.0"
authors = ["Dax Borde <daxborde@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
serde = "1.0.130"
sailfish = "0.3.3"
sailfish-macros = "0.3.3"
rand = "0.8.4"
sqlx = { version = "0.4.2", features = [ "runtime-tokio-native-tls", "postgres" ] }
actix-files = "0.5.0"